--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@ Unlocked 2/50 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-      3 achievements
+      5 achievements
       2 gc
       1 status
       1 remote
       1 push
       1 help
       1 --git-dir=.git
+      1 config
       1 checkout
       1 branch
 </pre>
