--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 3/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 5 points<br>
+Unlocked 4/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 6 points<br>
 <ul>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
+     15 --git-dir=.git
+      7 branch
       6 achievements
-      4 branch
-      3 --git-dir=.git
+      5 checkout
+      4 help
+      3 status
+      2 rebase
       2 push
       2 pull
-      2 help
       2 gc
-      2 checkout
-      1 status
+      2 difftool
+      1 reset
       1 remote
+      1 mergetool
       1 log
-      1 difftool
       1 config
+      1 clean
+      1 cherry-pick
 </pre>
 <script type="text/javascript">
 function showLocked() {
@@ -53,7 +59,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
