--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 9 points<br>
+Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 13 points<br>
 <ul>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
@@ -21,12 +22,12 @@ Git commands sorted by usage:
 <pre style="text-align: left">
      15 --git-dir=.git
       9 branch
+      7 help
+      6 log
+      6 checkout
       6 achievements
-      5 help
-      5 checkout
       3 status
-      3 log
-      2 rebase
+      3 rebase
       2 push
       2 pull
       2 gc
@@ -35,6 +36,7 @@ Git commands sorted by usage:
       1 reset
       1 remote
       1 mergetool
+      1 --git-dir=/home/stavros/git/otp/.git
       1 config
       1 clean
       1 cherry-pick
