--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 13 points<br>
+Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 18 points<br>
 <ul>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
+<li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
      15 --git-dir=.git
+     14 log
       9 branch
-      7 help
-      6 log
+      8 rebase
+      8 help
       6 checkout
       6 achievements
       3 status
-      3 rebase
+      3 difftool
       2 push
       2 pull
+      2 mergetool
       2 gc
-      2 difftool
       1 rev-parse
       1 reset
       1 remote
-      1 mergetool
       1 --git-dir=/home/stavros/git/otp/.git
       1 config
       1 clean
