--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 18 points<br>
+Unlocked 6/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 20 points<br>
 <ul>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -21,26 +22,28 @@ Unlocked 5/50 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     15 --git-dir=.git
-     14 log
-      9 branch
-      8 rebase
-      8 help
-      6 checkout
+     19 log
+     17 --git-dir=.git
+     11 rebase
+     11 help
+     10 branch
+      8 checkout
+      6 status
       6 achievements
-      3 status
-      3 difftool
-      2 push
-      2 pull
+      4 difftool
+      3 push
+      3 pull
       2 mergetool
       2 gc
+      2 clean
       1 rev-parse
       1 reset
       1 remote
       1 --git-dir=/home/stavros/git/otp/.git
       1 config
-      1 clean
+      1 commit
       1 cherry-pick
+      1 add
 </pre>
 <script type="text/javascript">
 function showLocked() {
@@ -64,7 +67,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
