--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 7/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 22 points<br>
+Unlocked 8/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 24 points<br>
 <ul>
+<li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -36,6 +37,7 @@ Git commands sorted by usage:
       3 pull
       2 mergetool
       2 gc
+      2 commit
       2 clean
       2 add
       1 rev-parse
@@ -43,7 +45,6 @@ Git commands sorted by usage:
       1 remote
       1 --git-dir=/home/stavros/git/otp/.git
       1 config
-      1 commit
       1 cherry-pick
 </pre>
 <script type="text/javascript">
@@ -58,7 +59,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <ul>
 <li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
-<li><div class="title">Author</div><div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
