--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 29 points<br>
+Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 32 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -26,25 +27,26 @@ Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     20 --git-dir=.git
+     26 --git-dir=.git
      19 log
+     17 checkout
+     13 rebase
+     13 branch
+     12 status
      12 help
-     12 branch
-     11 rebase
-     11 checkout
-      8 status
+      8 reset
+      7 difftool
       6 achievements
-      4 push
+      5 push
       4 pull
-      4 difftool
-      2 reset
+      3 commit
+      3 clean
+      3 add
       2 mergetool
       2 gc
-      2 commit
-      2 clean
-      2 add
       1 rev-parse
       1 remote
+      1 merge
       1 --git-dir=/home/stavros/git/otp/.git
       1 config
       1 cherry-pick
