--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 32 points<br>
+Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 35 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -21,27 +21,28 @@ Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     26 --git-dir=.git
+     27 --git-dir=.git
      19 log
-     17 checkout
+     18 checkout
+     14 status
+     14 branch
      13 rebase
-     13 branch
-     12 status
      12 help
-      8 reset
-      7 difftool
+      9 reset
+      8 difftool
       6 achievements
       5 push
       4 pull
+      4 add
       3 commit
       3 clean
-      3 add
       2 mergetool
       2 gc
       1 rev-parse
