--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 35 points<br>
+Unlocked 9/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
@@ -40,8 +41,8 @@ Git commands sorted by usage:
       6 achievements
       5 push
       4 pull
+      4 commit
       4 add
-      3 commit
       3 clean
       2 mergetool
       2 gc
