--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
-<!DOCTYPE html PUBLIC -//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd> 
+<!DOCTYPE html PUBLIC -//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd>
 <html xmlns=http://www.w3.org/1999/xhtml>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>Stavros Aronis's Git Achievements</title>
-<link rel="alternate" type="application/rss+xml" title"rss feed" href="index.rss"/>
+<link rel="alternate" type="application/rss+xml" title="rss feed" href="index.rss"/>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -40,7 +41,7 @@ Unlocked 14/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     41 status
+     42 status
      38 rebase
      37 --git-dir=.git
      26 checkout
@@ -49,12 +50,12 @@ Git commands sorted by usage:
      19 difftool
      17 reset
      14 help
+     12 mergetool
      12 add
-     11 mergetool
-     10 commit
-     10 clean
+     11 commit
+     11 clean
       7 push
-      6 achievements
+      7 achievements
       5 --git-dir=/home/stavros/git/otp/.git
       4 rev-parse
       4 pull
