New achievement Apprentice Socialite (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 14/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 36 points<br>
+Unlocked 14/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 40 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -21,6 +21,7 @@ Unlocked 14/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Thug (Level 1)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
@@ -33,24 +34,24 @@ Unlocked 14/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-      9 commit
-      9 add
-      8 status
-      6 push
-      4 rebase
+     14 commit
+     14 add
+     13 status
+      8 push
+      5 rebase
       4 --git-dir=.git
       3 init
+      3 difftool
+      3 diff
       3 checkout
       3 branch
+      2 tree
       2 reset
-      2 diff
       2 config
-      1 tree
       1 remote
       1 pull
       1 mergetool
       1 help
-      1 difftool
       1 clean
       1 blame
       1 achievements
