New achievement Socialite (Level 6)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 217 points<br>
+Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 224 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -71,6 +71,7 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
@@ -78,37 +79,37 @@ Unlocked 26/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    357 --git-dir=.git
-    330 status
-    180 checkout
-    156 difftool
-    113 branch
-    109 help
-    108 commit
+    396 --git-dir=.git
+    341 status
+    205 checkout
+    163 difftool
+    123 branch
+    114 help
+    113 commit
     108 add
      65 rev-parse
-     57 reset
-     56 push
-     48 rebase
-     44 diff
-     42 stash
-     42 clean
+     62 push
+     59 reset
+     56 rebase
+     48 diff
+     43 stash
+     43 clean
      34 --git-dir=/home/stavros/git/otp/.git
+     30 bisect
      28 log
-     20 remote
-     16 pull
-     16 bisect
+     21 remote
+     18 pull
+     15 mergetool
+     15 cherry-pick
      14 tree
-     14 mergetool
-     12 cherry-pick
-      6 merge
+      7 merge
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       3 init
+      3 gc
       3 config
       3 blame
       2 tag
       2 ls-remote
-      2 gc
       1 revert
       1 fetch
       1 achievements
