New achievement Hunter (Level 5)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 363 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 369 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -75,6 +75,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Hunter (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
+<li><div class="title">Hunter (Level 5)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -103,22 +104,22 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1045 status
-   1014 --git-dir=.git
-    608 checkout
+   1047 status
+   1015 --git-dir=.git
+    609 checkout
     414 branch
-    361 commit
+    366 commit
     325 difftool
     289 rebase
-    285 help
-    266 add
-    247 reset
+    286 help
+    268 add
+    249 reset
     231 push
     165 clean
     160 rev-parse
     144 stash
     144 --git-dir=/home/stavros/git/otp/.git
-    132 diff
+    133 diff
      64 log
      63 mergetool
      48 pull
@@ -126,8 +127,8 @@ Git commands sorted by usage:
      39 remote
      35 cherry-pick
      33 show
+     32 bisect
      31 mv
-     30 bisect
      26 tree
      19 merge
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
