New achievement Apprentice Merchant (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 378 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 382 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -38,6 +38,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Locksmith (Level 1)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 92 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 133 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 167 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -105,47 +106,48 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1148 status
-   1115 --git-dir=.git
-    657 checkout
-    444 branch
-    387 commit
-    337 difftool
-    325 rebase
-    303 help
-    290 add
-    256 reset
-    254 push
-    171 rev-parse
+   1219 status
+   1168 --git-dir=.git
+    668 checkout
+    468 branch
+    427 commit
+    353 difftool
+    331 rebase
+    324 help
+    323 add
+    296 push
+    258 reset
+    183 rev-parse
     166 clean
-    154 --git-dir=/home/stavros/git/otp/.git
-    147 stash
-    142 diff
-     70 mergetool
-     70 log
-     54 pull
-     44 rm
-     42 show
-     40 remote
+    155 --git-dir=/home/stavros/git/otp/.git
+    148 stash
+    143 diff
+     87 pull
+     76 log
+     73 mergetool
+     55 show
+     47 rm
+     44 remote
+     39 tree
+     37 cherry-pick
      37 bisect
-     35 cherry-pick
      34 mv
-     27 tree
      23 merge
-      8 init
+     11 init
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       7 --git-dir=
+      7 clone
+      6 gc
       5 ls-remote
-      5 clone
       5 blame
-      4 gc
+      4 tag
       3 config
-      2 tag
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       1 --version
       1 revert
       1 merge-base
       1 grep
+      1 fsck
       1 fetch
       1 achievements
 </pre>
